# viiew

./: README.md  pyproject.toml
test/: test_array.py  test_utils.py
test/data/array/: n5r0c0o-1.txt  n5r0c0o0.txt  n5r0c0o1.txt  n5r0c1o-1.txt  n5r0c1o0.txt  n5r0c1o1.txt  n5r1c0o-1.txt  n5r1c0o0.txt  n5r1c0o1.txt  n5r1c1o-1.txt  n5r1c1o0.txt  n5r1c1o1.txt  n6r0c0o-1.txt  n6r0c0o0.txt  n6r0c0o1.txt  n6r0c1o-1.txt  n6r0c1o0.txt  n6r0c1o1.txt  n6r1c0o-1.txt  n6r1c0o0.txt  n6r1c0o1.txt  n6r1c1o-1.txt  n6r1c1o0.txt  n6r1c1o1.txt
test/data/table/: n5r0c0o-1.txt  n5r0c0o1.txt  n5r0c1o-1.txt  n5r0c1o1.txt  n5r1c0o-1.txt  n5r1c0o0.txt  n5r1c1o-1.txt  n5r1c1o1.txt  n6r0c0o-1.txt  n6r0c0o0.txt  n6r0c1o-1.txt  n6r0c1o0.txt  n6r1c0o-1.txt  n6r1c0o0.txt  n6r1c1o-1.txt  n6r1c1o1.txt
viiew/: __init__.py  main.py  utils.py
